DigicielFull/force-app/main/default/objects/amc__Role_Forecast__c/amc__Role_Forecast__c.object-meta.xml
<CustomObject>
    <label>Role Forecast</label>
    <nameField>
        <displayFormat>RFID:{000000}</displayFormat>
        <label>Forecast ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Role Forecasts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>