DigicielFull/force-app/main/default/objects/amc__Role_Forecast__c/fields/amc__Billable_Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>amc__Billable_Hourly_Rate__c</fullName>
    <inlineHelpText>Identifes the Billable Hourly Rate used for this Role Forecast</inlineHelpText>
    <label>Billable Hourly Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>