DigicielFull/force-app/main/default/objects/amc__Role_Forecast__c/fields/amc__Billable_Percentage__c.field-meta.xml
<CustomField>
    <fullName>amc__Billable_Percentage__c</fullName>
    <inlineHelpText>Identifies the percentage of Billable Hours requested for this Role Forecast. Used to determine &apos;Hours Forecast - Billable&apos;</inlineHelpText>
    <label>Billable Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>