DigicielFull/force-app/main/default/objects/amc__Role_Forecast__c/fields/amc__Forecast_Duration__c.field-meta.xml
<CustomField>
    <fullName>amc__Forecast_Duration__c</fullName>
    <formula>amc__End_Date__c -  amc__Start_Date__c +1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Days elapsed between the Start and End Date (inclusive)</inlineHelpText>
    <label>Forecast Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>