DigicielFull/force-app/main/default/objects/amc__Role_Forecast__c/fields/amc__Forecast_GM__c.field-meta.xml
<CustomField>
    <fullName>amc__Forecast_GM__c</fullName>
    <formula>amc__Forecast_P_L__c  /  amc__Hours_Forecast_Value_Billable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula: Calculates the Forecast GM% based on &apos;Forecast P&amp;L&apos; / &apos;Hours Forecast Value (Billable)&apos;</inlineHelpText>
    <label>Forecast GM%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>