DigicielFull/force-app/main/default/objects/amc__Role_Forecast__c/fields/amc__Forecast_P_L__c.field-meta.xml
<CustomField>
    <fullName>amc__Forecast_P_L__c</fullName>
    <formula>amc__Hours_Forecast_Value_Billable__c  -  amc__Hours_Forecast_Value_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula: Calculates the Forecast P&amp;L based on &apos;Hours Forecast Value (Billable)&apos; - &apos;Hours Forecast Value (Cost)&apos;</inlineHelpText>
    <label>Forecast P&amp;L</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>