DigicielFull/force-app/main/default/objects/amc__Role_Forecast__c/fields/amc__Hours_Forecast_Billable__c.field-meta.xml
<CustomField>
    <fullName>amc__Hours_Forecast_Billable__c</fullName>
    <inlineHelpText>Identifies the number of Billable Hours assigned to this Role on this Role Forecast</inlineHelpText>
    <label>Hours Forecast - Billable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>