DigicielFull/force-app/main/default/objects/amc__Role_Forecast__c/fields/amc__Hours_Forecast_Value_Cost__c.field-meta.xml
<CustomField>
    <fullName>amc__Hours_Forecast_Value_Cost__c</fullName>
    <formula>amc__Total_Hours_Forecast__c  *  amc__Cost_Hourly_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula: Calculates the Hours Forecast Value (Cost) based on &apos;Total Hours Forecast&apos; x &apos;Cost Hourly Rate&apos;</inlineHelpText>
    <label>Hours Forecast Value (Cost)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>