DigicielFull/force-app/main/default/objects/amc__Role_Forecast__c/fields/amc__Non_Billable_Hours__c.field-meta.xml
<CustomField>
    <fullName>amc__Non_Billable_Hours__c</fullName>
    <inlineHelpText>Identifies the number of Non Billable Hours requested for this Role Forecast. Used to determine &apos;Hours Forecast - Non Billable&apos;</inlineHelpText>
    <label>Non Billable Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>