DigicielFull/force-app/main/default/objects/amc__Role_Forecast__c/fields/amc__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>amc__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Links to the Opportunity record this Role Forecast relates to</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Role Forecasts</relationshipLabel>
    <relationshipName>Role_Forecasts</relationshipName>
    <type>Lookup</type>
</CustomField>