DigicielFull/force-app/main/default/objects/amc__Role_Forecast__c/fields/amc__Project__c.field-meta.xml
<CustomField>
    <fullName>amc__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Links to the Project record this Role Forecast record relates to</inlineHelpText>
    <label>Project</label>
    <referenceTo>amc__Project__c</referenceTo>
    <relationshipLabel>Role Forecasts</relationshipLabel>
    <relationshipName>Role_Forecasts</relationshipName>
    <type>Lookup</type>
</CustomField>