DigicielFull/force-app/main/default/objects/amc__Role_Forecast__c/fields/amc__Role__c.field-meta.xml
<CustomField>
    <fullName>amc__Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Links to the Role record this Role Forecast relates to</inlineHelpText>
    <label>Role</label>
    <referenceTo>amc__Role__c</referenceTo>
    <relationshipLabel>Role Forecasts</relationshipLabel>
    <relationshipName>Role_Forecasts</relationshipName>
    <type>Lookup</type>
</CustomField>