DigicielFull/force-app/main/default/objects/amc__Role_Forecast__c/fields/amc__Skill__c.field-meta.xml
<CustomField>
    <fullName>amc__Skill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Links to the Skill record this Role Forecast relates to</inlineHelpText>
    <label>Skill</label>
    <referenceTo>amc__Skill__c</referenceTo>
    <relationshipLabel>Role Forecasts</relationshipLabel>
    <relationshipName>Role_Forecasts</relationshipName>
    <type>Lookup</type>
</CustomField>