DigicielFull/force-app/main/default/objects/amc__Role_Forecast__c/fields/amc__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>amc__Start_Date__c</fullName>
    <inlineHelpText>Identifies the Forecasted Start Date</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>