DigicielFull/force-app/main/default/objects/amc__Role_Forecast__c/fields/amc__Working_Days__c.field-meta.xml
<CustomField>
    <fullName>amc__Working_Days__c</fullName>
    <inlineHelpText>Identifies the number of Working Days expected as part of this Role Forecast</inlineHelpText>
    <label>Working Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>