DigicielFull/force-app/main/default/objects/amc__Role_Forecast__c/validationRules/amc__End_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>amc__End_Date_Validation</fullName>
    <active>true</active>
    <description>Ensures the End Date is not set before the Start Date</description>
    <errorConditionFormula>amc__Start_Date__c  &gt;  amc__End_Date__c</errorConditionFormula>
    <errorMessage>The End Date must be greater or equal to the Start Date.</errorMessage>
</ValidationRule>